[tool.poetry]
name = "meritrank-python"
version = "0.1.0"
description = "MeritRank decentralized subjective social rank algorithm - Python microservice"
authors = ["V.G. Bulavintsev <golem.md@gmail.com>"]
readme = "README.md"
packages = [{include = "meritrank_python"}]
homepage = "https://github.com/ichorid/meritrank-python"
repository = "https://github.com/ichorid/meritrank-python"
license = "GPLv2"


[tool.poetry.dependencies]
python = "^3.10"
pony = "^0.7.16"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
