[tool.poetry]
name = "meritrank-python"
version = "0.2.10"
description = "MeritRank decentralized, sybil-resistant, personalized ranking algorithm library"
authors = ["V.G. Bulavintsev <golem.md@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ichorid/meritrank-python"
repository = "https://github.com/ichorid/meritrank-python"
license = "GPLv2"


[tool.poetry.dependencies]
python = ">=3.10"
networkx = ">=2.8.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["meritrank_python"]

[tool.coverage.report]
show_missing = true
#fail_under = 100

